--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,5 +3,10 @@
     border: 1px solid hsl(0, 0%, 22%);
     border-radius: 20px;
     width: 70%;
+}
 
+@media (max-width: 450px) {
+    .main{
+        width: 100%;
+    }
 }
