--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -59,3 +59,15 @@
     font-size: var(--fs-5);
     color: var(--light-gray-70);
 }
+
+@media (max-width: 450px) {
+    .preview{
+        width: 300px;
+        height: 130px;
+    }
+    .site1{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: start;
+    }
+}
