--- a/src/components/sidenav/SideNav.css
+++ b/src/components/sidenav/SideNav.css
@@ -38,7 +38,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 24px;
+  font-size: var(--fs-1);
   color: hsl(45, 100%, 72%);
   box-shadow: -4px 8px 24px hsla(0, 0%, 0%, 0.25);
   z-index: 1;
@@ -55,4 +55,22 @@
 }
 .info-title{
     font-weight: 600;
+}
+
+@media (max-width: 450px) {
+    .sidenav{
+        width: 97%;
+        height: auto;
+        padding: 5px;
+        margin-bottom: 10px;
+    }
+    .info{
+        margin: 10px;
+    }
+    .sidenav-top h2{
+        font-size: 22px;
+    }
+    .sidenav-top h3{
+        font-size: 18px;
+    }
 }
